can put an image in the sidebar

--- a/style.css
+++ b/style.css
@@ -2,7 +2,10 @@
     width: 960px;
     height: 600px;
     background: #ddd;
-    margin: auto;
+    display: inline-block;
+    float: left;
+    margin-left: 50px;
+    margin-right: 50px;
 }
 
 #page-title {
@@ -52,8 +55,7 @@ rect.parent,
 }
 
 #levels {
-    margin: auto;
-    width: 960px;
+    display: inline-block;
 }
 
 li[class^="level-"] {
@@ -78,9 +80,24 @@ li[class^="level-"] {
 }
 
 #levels-list {
-    width: 500px;
 }
 
 #levels span {
-    display: inline-block;
+}
+
+#instructions {
+    float:right;
+}
+
+.center{
+    display: block;
+    margin: auto;
+}
+
+#img-div {
+    height: 300px;
+}
+
+img {
+    height: 100%;
 }
