--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ li[class^="level-"] {
 }
 
 #img-div {
-    height: 300px;
+    height: 250px;
 }
 
 img {
@@ -113,4 +113,7 @@ img {
 .has-image { 
     stroke: black;
     stroke-width: 10;
+}
+#list-container {
+    width: 400px;
 }
