trying to use real data

--- a/style.css
+++ b/style.css
@@ -115,6 +115,13 @@ img {
     display: inline-block;
 }
 
+#requested-list {
+    float:right;
+    word-break:break-all;
+    display: inline;
+    width: 100%;
+}
+
 #levels {
     float: left;
 }
