--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ rect {
 }
 
 li[class^="level-"] {
-    padding: 10px;
+    padding: 6px;
     font-family: Arial;
 }
 
@@ -112,9 +112,12 @@ img {
 }
 
 #levels, #requests {
-    display: inline-block;
 }
 
+#levels {
+    height: 350px;
+}
+/*
 #levels {
     float: left;
 }
@@ -122,3 +125,12 @@ img {
 #requests {
     float: right;
 }
+
+#requested-list {
+    float: right;
+}
+
+#levels-list {
+    float: left;
+}
+*/
